fix purpose spacing

--- a/src/scss/_purpose.scss
+++ b/src/scss/_purpose.scss
@@ -8,7 +8,7 @@
   }
 
   .header-alignment {
-    @include grid-column($columns:11);
+    @include grid-column($columns:12);
     margin-bottom: rem-calc(20px);
   }
 
